0.4.0 [WIP]
=============
* is_valid now has enhanced validity checks

0.3.0
=============
* lat/lng output columns have been reversed in wkt_coords and wkt_centroid to match WKT structure (#15)
* wkt_centroid now notes an implicit assumption that it is being passed cartesian values (#14)

0.2.0
=============
* Centroid extraction made available through wkt_centroid
* Coordinate extraction made available through wkt_coords

0.1.0
=============

* Initial release