@@ -6,5 +6,6 @@ export(validate_wkt)
 export(wkt_bounding)
 export(wkt_centroid)
 export(wkt_coords)
+export(wkt_correct)
 importFrom(Rcpp,sourceCpp)
 useDynLib(wicket, .registration = TRUE)
