@@ -87,3 +87,14 @@ BEGIN_RCPP
     return rcpp_result_gen;
 END_RCPP
 }
+// wkt_correct
+CharacterVector wkt_correct(CharacterVector x);
+RcppExport SEXP wicket_wkt_correct(SEXP xSEXP) {
+BEGIN_RCPP
+    Rcpp::RObject rcpp_result_gen;
+    Rcpp::RNGScope rcpp_rngScope_gen;
+    Rcpp::traits::input_parameter< CharacterVector >::type x(xSEXP);
+    rcpp_result_gen = Rcpp::wrap(wkt_correct(x));
+    return rcpp_result_gen;
+END_RCPP
+}
