@@ -15,6 +15,7 @@ extern SEXP wicket_validate_wkt(SEXP);
 extern SEXP wicket_wkt_bounding(SEXP, SEXP);
 extern SEXP wicket_wkt_centroid(SEXP);
 extern SEXP wicket_wkt_coords(SEXP);
+extern SEXP wicket_wkt_correct(SEXP);
 
 static const R_CallMethodDef CallEntries[] = {
     {"wicket_bounding_wkt_list",   (DL_FUNC) &wicket_bounding_wkt_list,   1},
@@ -24,6 +25,7 @@ static const R_CallMethodDef CallEntries[] = {
     {"wicket_wkt_bounding",        (DL_FUNC) &wicket_wkt_bounding,        2},
     {"wicket_wkt_centroid",        (DL_FUNC) &wicket_wkt_centroid,        1},
     {"wicket_wkt_coords",          (DL_FUNC) &wicket_wkt_coords,          1},
+    {"wicket_wkt_correct",         (DL_FUNC) &wicket_wkt_correct,         1},
     {NULL, NULL, 0}
 };
 
